--- a/docs/modules/objectives/ctf.mdx
+++ b/docs/modules/objectives/ctf.mdx
@@ -184,7 +184,7 @@ Filters can be used to control who can pickup/capture the flag and when.
           If omitted, the base color of the banner is used.
         </td>
         <td>
-          <a href="/reference/colors">Dye Color Name</a>
+          <a href="/docs/reference/misc/colors">Dye Color Name</a>
         </td>
         <td></td>
       </tr>
@@ -775,7 +775,7 @@ The `permanent` option can be used to make a post into something like a [monumen
           <label>oo</label> to let the flag stay on the ground forever.
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td>30s</td>
       </tr>
@@ -793,7 +793,7 @@ The `permanent` option can be used to make a post into something like a [monumen
           </i>
         </td>
         <td>
-          <a href="/reference/time_periods">Time Period</a>
+          <a href="/docs/reference/misc/time-periods">Time Period</a>
         </td>
         <td></td>
       </tr>
